# PFE_Grp_14_Visual_Odometry

./: CMakeLists.txt  README.md  a  cameraStream.cpp  notes.txt  orb.cpp  orb.h  trajectory.cpp  trajectory.h  triangulation.cpp  video_slicer.cpp
BA/: BAPoseGraph.cpp  BAPoseGraph.h  CMakeLists.txt
BA/FinalVersion/: BAPoseGraph.cpp  BAPoseGraph.h
BA/TestWithSphere/: pose_graph.h  pose_graph_g2o_SE3.cpp
DataBase/: README.md  paramCamer.txt
DataBase/CameraBinoculaire/: README.md  paramCamer.txt
DataBase/CameraBinoculaire/Calibration/: Intrinseque_1.txt  Intrinseque_2.txt  README_calib.md  Rotation.txt  Translation.txt  donneesCalibration.mat
DataBase/DoubleCameras/: PositionObsExtRapide.csv  PositionObsExtlent.csv  lisezMoi.txt
DataBase/Weedy/: README.md
DataBase/Weedy/Baseline21cm-01-12/: ObservateurExterieur.MOV  ReadMe.md
DataBase/Weedy/Baseline21cm-01-12/Calibration/: ReadMe_Calib.md  stereoParamsBaseline21.mat
FromRelToAbs/: CMakeLists.txt  PosesTreatment.cpp  PosesTreatment.h
ICP/: ICP.cpp  ICP.h  ICP.hpp  MyICP.cpp  MyICP.hpp  main.cpp  prog
ORB/: README.md  main_orb.cpp  orb.cpp  orb.h  orb1.cpp
PFE/: PFE.cbp
Test/: test_test
Triangulation/: test  test.cpp  triangulation.cpp  triangulation.hpp
data_containers/: README.md
data_containers/Frame/: frame.cpp  frame.hpp
ransac/: a  ransac.cpp  ransac.hpp  test.cpp  test_mat.cpp  test_ransac.cpp
